--- a/miamtest2/src/App.css
+++ b/miamtest2/src/App.css
@@ -1,6 +1,10 @@
 body{
   color: white;
-  background-color: black;
+  background-color: rgb(46, 46, 46);
+}
+
+p{
+  color:red;
 }
 
 .root {
@@ -13,7 +17,7 @@ body{
 }
 
 nav{
-  background-color: blue;
+  background-color: rgb(133, 133, 255);
 
 }
 .App-logo {
